--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -365,13 +365,7 @@
       "---------------------------------\n",
       "Inital_Design:10 / 10  Try:17 / 20\n",
       "\n",
-      "Next bounds is\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Next bounds is\n",
       "eta = 0.307  max_depth = 13.120  min_child_weight = 1.259  subsample = 1.000  colsample_bytree = 0.905  gamma = 0.994  n_estimators = 189.404  learning_rate = 0.247  reg_lambda = 0.906  reg_alpha = 0.258  \n",
       "\n",
       "Logloss: 1.448225\n",
