--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -6,18 +6,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
     "import matplotlib.pyplot as plt\n",
+    "import japanize_matplotlib #日本語読み込み\n",
+    "\n",
     "from pandas.plotting import parallel_coordinates\n",
     "get_ipython().run_line_magic('matplotlib', 'inline')\n",
-    "\n",
     "from sklearn import linear_model\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics  import log_loss\n",
-    "import pickle"
+    "\n",
+    "import gc　#メモリ開放に使用\n",
+    "import pickle #モデル保存に使用"
    ]
   },
   {
@@ -114,8 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import gc\n",
-    "\n",
+    "#メモリの開放\n",
     "del train_pitch_df, train_pitch_df2,train_player_df,tmp,Y_X,Y_X_10000\n",
     "gc.collect()"
    ]
@@ -158,7 +161,7 @@
     "pip install japanize-matplotlib\n",
     "'''\n",
     "\n",
-    "\n",
+    "#変数設定\n",
     "init_num = 50          #初期サンプル数\n",
     "max_iter = 200         #サンプリング回数\n",
     "path_model = \"../Model/xgb_model.pickle\" #Model保存場所\n",
@@ -182,7 +185,7 @@
     "                              learning_rate = float(x[:,7]),\n",
     "                              reg_lambda = float(x[:,8]),\n",
     "                              reg_alpha = float(x[:,9]),\n",
-    "                              tree_method = 'gpu_hist',\n",
+    "                              tree_method = 'gpu_hist',　　　　　#cpuの場合削除\n",
     "                              objective = 'multi:softprob'\n",
     "                              )\n",
     "    #global変数の読み込み\n",
@@ -216,7 +219,7 @@
     "    kfold = KFold(n_splits=5, random_state=7)\n",
     "    results = cross_validate(model, train_x, train_y, scoring = 'neg_log_loss', cv=kfold)\n",
     "    \n",
-    "    #\n",
+    "    #時間表示\n",
     "    t = time.time() - start\n",
     "    print(\"\\n\\ntime:\",t)\n",
     "    \n",
@@ -241,13 +244,13 @@
     "print(\"Bayesian Optimization\")\n",
     "myBopt = GPyOpt.methods.BayesianOptimization(f=f,initial_design_numdata=init_num, verbosity = True, domain=bounds)\n",
     "myBopt.run_optimization(max_iter=max_iter)\n",
+    "\n",
+    "#処理時間の表示\n",
     "total_time = time.time() - start_all\n",
     "print(\"\\nTotal-Time:\",total_time)\n",
-    "print(\"\\nEnd\")\n",
-    "result_z = myBopt.Y\n",
-    "    \n",
     "\n",
-    "\n"
+    "print(\"\\nEnd\")\n",
+    "result_z = myBopt.Y\n"
    ]
   },
   {
@@ -258,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "#結果の表示\n",
+    "#結果の可視化\n",
     "plt.figure()\n",
     "plt.plot(result_z)\n",
     "plt.xlabel(\"epochs\")\n",
@@ -308,11 +311,10 @@
     "\n",
     "param = {'eta': x[0],'max_depth':int(x[1]), 'min_child_weight':x[2], 'subsample':x[3],'colsample_bytree':x[4],\n",
     "         'gamma': x[5],'n_estimators':int(x[6]),'learning_rate':x[7],'reg_lambda':x[8],'reg_alpha':x[9],\n",
-    "         'colsample':0.5, 'objective':'multi:softprob','num_class':8, 'eval_metric':'mlogloss', 'terr_method':'gpu_hist'}  \n",
+    "         'colsample':0.5, 'objective':'multi:softprob','num_class':8, 'eval_metric':'mlogloss', \n",
+    "         'terr_method':'gpu_hist'}  #cpuの場合削除\n",
     "\n",
-    "bst = xgb.train(param, dtrain, num_round, evallist, early_stopping_rounds=10)\n",
-    "\n",
-    "\n"
+    "bst = xgb.train(param, dtrain, num_round, evallist, early_stopping_rounds=10)\n"
    ]
   },
   {
@@ -343,8 +345,6 @@
     "print(log_loss(test_y, pred_p))\n",
     "\n",
     "#重要度の可視化\n",
-    "import matplotlib.pyplot as plt\n",
-    "import japanize_matplotlib #日本語読み込み\n",
     "fig, ax = plt.subplots(1, 1, figsize=(8,25))\n",
     "xgb.plot_importance(bst, ax=ax)"
    ]
@@ -362,7 +362,7 @@
     "model = xgb.XGBClassifier(num_class = 8, eta=x[0], max_depth=int(x[1]),min_child_weight=x[2],\n",
     "                          subsample=x[3], colsample_bytree=x[4], gamma=x[5], n_estimators=int(x[6]),\n",
     "                          learning_rate=x[7], reg_lambda=x[8], reg_alpha=x[9],\n",
-    "                          tree_method = 'gpu_hist',\n",
+    "                          tree_method = 'gpu_hist',　　　　　　　#cpuの場合削除\n",
     "                          objective = 'multi:softprob')\n",
     "fit_params = {\"early_stopping_rounds\": 10,\n",
     "              \"eval_set\": [[test_x, test_y]],\n",
@@ -385,9 +385,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "#メモリの確認\n",
-    "\n",
     "print(\"{}{: >25}{}{: >10}{}\".format('|','Variable Name','|','Memory','|'))\n",
     "print(\" ------------------------------------ \")\n",
     "for var_name in dir():\n",
@@ -395,13 +393,6 @@
     "        print (\"{}{: >25}{}{: >10}{}\".format('|',var_name,'|',sys.getsizeof(eval(var_name)),'|'))\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -420,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
