細かい修正

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -20,7 +20,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics  import log_loss\n",
     "\n",
-    "import gc　#メモリ開放に使用\n",
+    "import gc     #メモリ開放に使用\n",
     "import pickle #モデル保存に使用"
    ]
   },
@@ -164,7 +164,7 @@
     "#変数設定\n",
     "init_num = 50          #初期サンプル数\n",
     "max_iter = 200         #サンプリング回数\n",
-    "path_model = \"../Model/xgb_model.pickle\" #Model保存場所\n",
+    "path_model = \"../Model/xgb_model2.pickle\" #Model保存場所\n",
     "\n",
     "#関数内で使う変数\n",
     "initial_design = 1     #初期サンプル回数計測\n",
@@ -185,7 +185,7 @@
     "                              learning_rate = float(x[:,7]),\n",
     "                              reg_lambda = float(x[:,8]),\n",
     "                              reg_alpha = float(x[:,9]),\n",
-    "                              tree_method = 'gpu_hist',　　　　　#cpuの場合削除\n",
+    "                              tree_method = 'gpu_hist',           #cpuの場合削除\n",
     "                              objective = 'multi:softprob'\n",
     "                              )\n",
     "    #global変数の読み込み\n",
@@ -195,7 +195,7 @@
     "    global bounds_list\n",
     "    \n",
     "    #回数の表示　Inital_Design:初期　Try:\n",
-    "    print(\"---------------------------------\")\n",
+    "    print(\"------------------------------------\")\n",
     "    print(\"Inital_Design:{0} / {1}  Try:{2} / {3}\\n\".format(initial_design, init_num, try_, max_iter))\n",
     "    \n",
     "    #回数の更新\n",
@@ -411,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
