可視化の改良

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -12,6 +12,7 @@
     "import time\n",
     "import matplotlib.pyplot as plt\n",
     "import japanize_matplotlib #日本語読み込み\n",
+    "from IPython.display import display\n",
     "\n",
     "from pandas.plotting import parallel_coordinates\n",
     "get_ipython().run_line_magic('matplotlib', 'inline')\n",
@@ -102,13 +103,14 @@
     "\n",
     "#相関係数\n",
     "Y_X_corr = Y_X.corr()\n",
-    "print(type(Y_X_corr))\n",
+    "\n",
     "\n",
     "#相関係数のソート\n",
     "#200行まで表示\n",
     "pd.set_option('display.max_rows',200)\n",
     "Y_X_corr_rank = Y_X_corr['球種']\n",
     "Y_X_corr_rank = Y_X_corr.sort_values('球種',ascending=False)\n",
+    "print(Y_X_corr_rank['球種'])\n",
     "print(\"OK\")"
    ]
   },
@@ -227,19 +229,18 @@
     "    score = results['test_score'].mean()*(-1)\n",
     "    print(f\"\\nLogloss: {score:f}\")\n",
     "    \n",
-    "    \n",
     "    return score\n",
     "\n",
     "bounds = [{'name': 'eta', 'type': 'continuous', 'domain': (0.3,0.4)},\n",
-    "          {'name': 'max_depth', 'type': 'continuous', 'domain': (3,15)},\n",
-    "          {'name': 'min_child_weight', 'type': 'continuous', 'domain': (0,2)},\n",
+    "          {'name': 'max_depth', 'type': 'continuous', 'domain': (10,15)},\n",
+    "          {'name': 'min_child_weight', 'type': 'continuous', 'domain': (0,0.5)},\n",
     "          {'name': 'subsample', 'type': 'continuous', 'domain': (0.8,1)},\n",
     "          {'name': 'colsample_bytree', 'type': 'continuous', 'domain': (0.8,1)},\n",
-    "          {'name': 'gamma', 'type': 'continuous', 'domain': (0,10)},\n",
-    "          {'name': 'n_estimators', 'type': 'continuous', 'domain': (10,200)},\n",
-    "          {'name': 'learning_rate', 'type': 'continuous', 'domain': (0.3,1)},\n",
+    "          {'name': 'gamma', 'type': 'continuous', 'domain': (0,100)},\n",
+    "          {'name': 'n_estimators', 'type': 'continuous', 'domain': (100,400)},\n",
+    "          {'name': 'learning_rate', 'type': 'continuous', 'domain': (0.1,0.5)},\n",
     "          {'name': 'reg_lambda', 'type': 'continuous', 'domain': (0.8,1)},\n",
-    "          {'name': 'reg_alpha', 'type': 'continuous', 'domain': (0,0.3)}]\n",
+    "          {'name': 'reg_alpha', 'type': 'continuous', 'domain': (0.2,0.4)}]\n",
     "start_all = time.time()\n",
     "print(\"Bayesian Optimization\")\n",
     "myBopt = GPyOpt.methods.BayesianOptimization(f=f,initial_design_numdata=init_num, verbosity = True, domain=bounds)\n",
@@ -257,7 +258,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -268,6 +269,11 @@
     "plt.ylabel(\"CV Accuracy\")\n",
     "plt.show()\n",
     "\n",
+    "#\n",
+    "bounds_list_corr = bounds_list.corr()\n",
+    "display(bounds_list_corr)\n",
+    "\n",
+    "#\n",
     "df = pd.DataFrame(bounds_list)\n",
     "for bound ,i in zip(bounds,range(len(bounds))):\n",
     "    df = df.rename(columns={i:bound[\"name\"]})\n",
@@ -280,13 +286,31 @@
     "    plt.show()\n",
     "    plt.clf\n",
     "    plt.close()\n",
-    "print(len(bounds_list))\n",
-    "    \n",
+    "\n",
     "#最適なパラメータの表示\n",
     "print(\"### best parameters ###\")\n",
-    "\n",
+    "print(\"best logloss:\",result_z.min())\n",
     "for bound, x_opt in zip(bounds, myBopt.x_opt):\n",
-    "    print(f\"{bound['name']:s} = {x_opt:.3f}\")\n"
+    "    print(f\"{bound['name']:s} = {x_opt:.3f}\")\n",
+    "\n",
+    "myBopt.x_opt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "bounds_name=[]\n",
+    "for bound in bounds:\n",
+    "    bounds_name.append(bound['name'])\n",
+    "df = pd.DataFrame(bounds_list, columns = bounds_name)\n",
+    "df['logloss'] = myBopt.Y\n",
+    "df.to_csv('../Param/params.csv',mode = 'a')\n",
+    "\n",
+    "del df,bounds_list #"
    ]
   },
   {
@@ -302,8 +326,9 @@
     "x=([3.58159257e-01, 1.31312711e+01, 1.72685680e-01, 8.54364803e-01,\n",
     "       8.01858020e-01, 1.45562823e+00, 1.88617583e+02, 1.12371349e-01,\n",
     "       9.54153925e-01, 2.94973626e-01])\n",
-    "\n",
-    "\n",
+    "for bound, x_opt in zip(bounds, x):\n",
+    "    print(f\"{bound['name']:s} = {x_opt:.3f}\")\n",
+    "    \n",
     "dtrain = xgb.DMatrix(train_x, label=train_y)\n",
     "dtest = xgb.DMatrix(test_x, label=test_y)  \n",
     "evallist = [(dtrain, 'train'), (dtest, 'eval')]  #saigonosiyhyougaearly_stopnisiyou\n",
@@ -324,7 +349,9 @@
    "outputs": [],
    "source": [
     "#modelの保存\n",
-    "pickle.dump(bst, open(path_model, \"wb\"))\n"
+    "pickle.dump(bst, open(path_model, \"wb\"))\n",
+    "#modelの読みこみ\n",
+    "xgb_model_load = pickle.load(open(path_model, \"rb\"))"
    ]
   },
   {
