テストの実行コード追加

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -28,25 +28,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_columns', 200)\n",
     "\n",
     "#読み込み\n",
-    "train_pitch_df = pd.read_csv(\"../Data/train_pitch_add_column1.csv\")\n",
-    "train_player_df = pd.read_csv(\"../Data/train_player.csv\")\n",
+    "train_pitch_df = pd.read_csv(\"../Data/train_pitch_add_column2.csv\")\n",
+    "#train_player_df = pd.read_csv(\"../Data/train_player.csv\")\n",
     "\n",
     "print(train_pitch_df.columns)\n",
     "train_pitch_df.head()\n",
     "\n",
     "#one-hot化が必要\n",
     "\n",
-    "columns1 = ['球場名','試合種別詳細','イニング','表裏','打者打席左右',\n",
+    "columns1 = ['試合種別詳細','イニング','表裏','打者打席左右',\n",
     "            '投手投球左右','投手役割','投手登板順','打者打順', '打者守備位置', '1球前ステータス']\n",
     "\n",
     "#one-hot化が必要だが多いので保留\n",
-    "columns2 = ['日付', '時刻','年度','試合ID','投手ID','投手チームID','打者ID','打者チームID','プレイ前走者状況',\n",
+    "columns2 = ['日付', '時刻','年度','試合ID','投手ID','投手チームID','打者ID','打者チームID','プレイ前走者状況','球場名',\n",
     "            '一塁走者ID', '二塁走者ID','三塁走者ID', '捕手ID', '一塁手ID', '二塁手ID', '三塁手ID', '遊撃手ID',\n",
     "            '左翼手ID', '中堅手ID','右翼手ID', '成績対象投手ID', '成績対象打者ID','ホームチームID','アウェイチームID','球場ID']\n",
     "\n",
@@ -54,6 +56,24 @@
     "columns3 = ['試合内連番', '試合内投球数','イニング内打席数', '打席内投球数','投手試合内対戦打者数', '投手試合内投球数',\n",
     "            '投手イニング内投球数','打者試合内打席数', 'プレイ前ホームチーム得点数', 'プレイ前アウェイチーム得点数',\n",
     "            'プレイ前アウト数', 'プレイ前ボール数', 'プレイ前ストライク数','自チーム得点数', '相手チーム得点数', '点差']\n",
+    "#削除\n",
+    "columns5 = ['プレイ前ホームチーム得点数', 'プレイ前アウェイチーム得点数']\n",
+    "\n",
+    "##### ver3用 #####\n",
+    "\n",
+    "#batter,pitcherで使わないやつ\n",
+    "columns_out = ['投手_年度', '投手_チームID', '投手_チーム名', '投手_選手ID', '投手_選手名', '投手_育成選手F', '投手_背番号', '投手_位置', '投手_投', '投手_打',\n",
+    "               '投手_生年月日', '投手_出身高校ID', '投手_出身高校名', '投手_出身大学ID', '投手_出身大学名', '投手_社会人',\n",
+    "               '投手_ドラフト年', '投手_ドラフト種別', '投手_ドラフト順位', '投手_出身国', '投手_出身地', '投手_血液型',\n",
+    "               '打者_年度', '打者_チームID', '打者_チーム名', '打者_選手ID', '打者_選手名', '打者_育成選手F', '打者_背番号', '打者_位置', '打者_投', '打者_打',\n",
+    "               '打者_生年月日', '打者_出身高校ID', '打者_出身高校名', '打者_出身大学ID', '打者_出身大学名', '打者_社会人',\n",
+    "               '打者_ドラフト年', '打者_ドラフト種別', '打者_ドラフト順位', '打者_出身国', '打者_出身地', '打者_血液型']\n",
+    "\n",
+    "#batter,pitcherで使うやつ\n",
+    "columns_in = ['投手_身長', '投手_体重','投手_年俸', '打者_身長', '打者_体重', '打者_年俸']\n",
+    "\n",
+    "##################\n",
+    "\n",
     "\n",
     "columns4 = ['データ内連番','球種','投球位置区域']\n",
     "\n",
@@ -66,16 +86,31 @@
     "\n",
     "#余分な特徴量を削除\n",
     "train_pitch_df2 = train_pitch_df.drop(columns = columns2)\n",
+    "train_pitch_df2 = train_pitch_df2.drop(columns = columns5)\n",
+    "train_pitch_df2 = train_pitch_df2.drop(columns = columns_out) #ver3用\n",
+    "\n",
+    "\n",
     "X = train_pitch_df2.drop(columns = columns4)\n",
     "\n",
+    "\n",
     "Y = train_pitch_df['球種']\n",
-    "Y2 = train_pitch_df['球種'].astype(str)\n",
-    "Y2 = pd.get_dummies(Y2)\n",
     "\n",
     "X.head()\n",
     "\n",
     "#要素ごとの個数を表示\n",
     "Y.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(X.columns)\n",
+    "\n",
+    "for column in X.columns:\n",
+    "    print(f'{column},',end='')"
    ]
   },
   {
@@ -121,7 +156,7 @@
    "outputs": [],
    "source": [
     "#メモリの開放\n",
-    "del train_pitch_df, train_pitch_df2,train_player_df,tmp,Y_X,Y_X_10000\n",
+    "del train_pitch_df, train_pitch_df2,tmp,Y_X,Y_X_10000\n",
     "gc.collect()"
    ]
   },
@@ -132,7 +167,7 @@
    "outputs": [],
    "source": [
     "#通常\n",
-    "train_x, test_x, train_y, test_y = train_test_split(X, Y, test_size=0.3, shuffle=True)\n",
+    "train_x, test_x, train_y, test_y = train_test_split(X, Y, test_size=0.3, shuffle=False)\n",
     "\n",
     "#球種割合揃え\n",
     "#train_x, test_x, train_y, test_y = train_test_split(X2, Y2, test_size=0.3, shuffle=True)\n"
@@ -141,9 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "########### XGBoost ###########\n",
@@ -164,10 +197,30 @@
     "'''\n",
     "\n",
     "#変数設定\n",
-    "init_num = 50          #初期サンプル数\n",
-    "max_iter = 200         #サンプリング回数\n",
+    "init_num = 1          #初期サンプル数\n",
+    "max_iter = 4         #サンプリング回数\n",
     "path_model = \"../Model/xgb_model2.pickle\" #Model保存場所\n",
     "\n",
+    "bounds = [{'name': 'eta', 'type': 'continuous', 'domain': (0.3,0.4)},\n",
+    "          {'name': 'max_depth', 'type': 'continuous', 'domain': (10,15)},\n",
+    "          {'name': 'min_child_weight', 'type': 'continuous', 'domain': (0,0.5)},\n",
+    "          {'name': 'subsample', 'type': 'continuous', 'domain': (0.8,1)},\n",
+    "          {'name': 'colsample_bytree', 'type': 'continuous', 'domain': (0.8,1)},\n",
+    "          {'name': 'gamma', 'type': 'continuous', 'domain': (0,100)},\n",
+    "          {'name': 'n_estimators', 'type': 'continuous', 'domain': (100,400)},\n",
+    "          {'name': 'learning_rate', 'type': 'continuous', 'domain': (0.1,0.5)},\n",
+    "          {'name': 'reg_lambda', 'type': 'continuous', 'domain': (0.8,1)},\n",
+    "          {'name': 'reg_alpha', 'type': 'continuous', 'domain': (0.2,0.4)}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "#関数内で使う変数\n",
     "initial_design = 1     #初期サンプル回数計測\n",
     "try_ = 0               #サンプリング回数計測\n",
@@ -187,7 +240,7 @@
     "                              learning_rate = float(x[:,7]),\n",
     "                              reg_lambda = float(x[:,8]),\n",
     "                              reg_alpha = float(x[:,9]),\n",
-    "                              tree_method = 'gpu_hist',           #cpuの場合削除\n",
+    "                             # tree_method = 'gpu_hist',           #cpuの場合削除\n",
     "                              objective = 'multi:softprob'\n",
     "                              )\n",
     "    #global変数の読み込み\n",
@@ -231,16 +284,7 @@
     "    \n",
     "    return score\n",
     "\n",
-    "bounds = [{'name': 'eta', 'type': 'continuous', 'domain': (0.3,0.4)},\n",
-    "          {'name': 'max_depth', 'type': 'continuous', 'domain': (10,15)},\n",
-    "          {'name': 'min_child_weight', 'type': 'continuous', 'domain': (0,0.5)},\n",
-    "          {'name': 'subsample', 'type': 'continuous', 'domain': (0.8,1)},\n",
-    "          {'name': 'colsample_bytree', 'type': 'continuous', 'domain': (0.8,1)},\n",
-    "          {'name': 'gamma', 'type': 'continuous', 'domain': (0,100)},\n",
-    "          {'name': 'n_estimators', 'type': 'continuous', 'domain': (100,400)},\n",
-    "          {'name': 'learning_rate', 'type': 'continuous', 'domain': (0.1,0.5)},\n",
-    "          {'name': 'reg_lambda', 'type': 'continuous', 'domain': (0.8,1)},\n",
-    "          {'name': 'reg_alpha', 'type': 'continuous', 'domain': (0.2,0.4)}]\n",
+    "\n",
     "start_all = time.time()\n",
     "print(\"Bayesian Optimization\")\n",
     "myBopt = GPyOpt.methods.BayesianOptimization(f=f,initial_design_numdata=init_num, verbosity = True, domain=bounds)\n",
@@ -270,10 +314,6 @@
     "plt.show()\n",
     "\n",
     "#\n",
-    "bounds_list_corr = bounds_list.corr()\n",
-    "display(bounds_list_corr)\n",
-    "\n",
-    "#\n",
     "df = pd.DataFrame(bounds_list)\n",
     "for bound ,i in zip(bounds,range(len(bounds))):\n",
     "    df = df.rename(columns={i:bound[\"name\"]})\n",
@@ -287,11 +327,18 @@
     "    plt.clf\n",
     "    plt.close()\n",
     "\n",
+    "#\n",
+    "df['logloss'] = myBopt.Y\n",
+    "df_corr = df.corr()\n",
+    "display(df_corr['logloss'])\n",
+    "\n",
+    "\n",
     "#最適なパラメータの表示\n",
     "print(\"### best parameters ###\")\n",
     "print(\"best logloss:\",result_z.min())\n",
     "for bound, x_opt in zip(bounds, myBopt.x_opt):\n",
     "    print(f\"{bound['name']:s} = {x_opt:.3f}\")\n",
+    "\n",
     "\n",
     "myBopt.x_opt"
    ]
@@ -302,15 +349,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "#パラメータの保存\n",
     "bounds_name=[]\n",
     "for bound in bounds:\n",
     "    bounds_name.append(bound['name'])\n",
     "df = pd.DataFrame(bounds_list, columns = bounds_name)\n",
     "df['logloss'] = myBopt.Y\n",
+    "df = df.sort_values('logloss', ascending=True)\n",
+    "df = df[:10]\n",
     "df.to_csv('../Param/params.csv',mode = 'a')\n",
     "\n",
-    "del df,bounds_list #"
+    "del df, bounds_list #二度書き防止のために削除\n",
+    "\n",
+    "###################################"
    ]
   },
   {
@@ -322,7 +373,7 @@
    "outputs": [],
    "source": [
     "#最適なパラメータで再度学習、\n",
-    "#x = myBopt.x_opt\n",
+    "# x = myBopt.x_opt\n",
     "x=([3.58159257e-01, 1.31312711e+01, 1.72685680e-01, 8.54364803e-01,\n",
     "       8.01858020e-01, 1.45562823e+00, 1.88617583e+02, 1.12371349e-01,\n",
     "       9.54153925e-01, 2.94973626e-01])\n",
@@ -336,10 +387,11 @@
     "\n",
     "param = {'eta': x[0],'max_depth':int(x[1]), 'min_child_weight':x[2], 'subsample':x[3],'colsample_bytree':x[4],\n",
     "         'gamma': x[5],'n_estimators':int(x[6]),'learning_rate':x[7],'reg_lambda':x[8],'reg_alpha':x[9],\n",
-    "         'colsample':0.5, 'objective':'multi:softprob','num_class':8, 'eval_metric':'mlogloss', \n",
-    "         'terr_method':'gpu_hist'}  #cpuの場合削除\n",
+    "         'colsample':0.5, 'objective':'multi:softprob','num_class':8, 'eval_metric':'mlogloss' \n",
+    "#         ,'terr_method':'gpu_hist'\n",
+    "        }  #cpuの場合削除\n",
     "\n",
-    "bst = xgb.train(param, dtrain, num_round, evallist, early_stopping_rounds=10)\n"
+    "bst = xgb.train(param, dtrain, num_round, evallist, early_stopping_rounds=20)\n"
    ]
   },
   {
@@ -349,8 +401,16 @@
    "outputs": [],
    "source": [
     "#modelの保存\n",
-    "pickle.dump(bst, open(path_model, \"wb\"))\n",
-    "#modelの読みこみ\n",
+    "pickle.dump(bst, open(path_model, \"wb\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#modelの読み込み\n",
     "xgb_model_load = pickle.load(open(path_model, \"rb\"))"
    ]
   },
@@ -372,6 +432,18 @@
     "print(log_loss(test_y, pred_p))\n",
     "\n",
     "#重要度の可視化\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(8,25))\n",
+    "xgb.plot_importance(bst, ax=ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(8,25))\n",
     "xgb.plot_importance(bst, ax=ax)"
    ]
@@ -407,6 +479,147 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def type_change(x):       \n",
+    "    if type(x) == type('string'):\n",
+    "        return int(x)\n",
+    "    else:\n",
+    "        return x\n",
+    "def touban9_8(x):\n",
+    "    if x == 9:\n",
+    "        return 8\n",
+    "    else:\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_columns', 200)\n",
+    "#Test読み込み\n",
+    "\n",
+    "test_pitch_df_list = pd.read_csv(\"../Data/test_pitch_add_column2.csv\", chunksize = 100000)\n",
+    "#test_player_df = pd.read_csv(\"../Data/test_player.csv\")\n",
+    "X_test_ = pd.DataFrame()\n",
+    "data_num = pd.DataFrame()\n",
+    "count = 0\n",
+    "\n",
+    "#one-hot化が必要\n",
+    "\n",
+    "columns1 = ['試合種別詳細','イニング','表裏','打者打席左右','投手投球左右','投手役割','投手登板順','打者打順',\n",
+    "            '打者守備位置', '1球前ステータス']\n",
+    "\n",
+    "#one-hot化が必要だが多いので保留\n",
+    "columns2 = ['日付', '時刻','年度','試合ID','投手ID','投手チームID','打者ID','打者チームID','プレイ前走者状況','球場名',\n",
+    "            '一塁走者ID', '二塁走者ID','三塁走者ID', '捕手ID', '一塁手ID', '二塁手ID', '三塁手ID', '遊撃手ID',\n",
+    "            '左翼手ID', '中堅手ID','右翼手ID', '成績対象投手ID', '成績対象打者ID','ホームチームID','アウェイチームID','球場ID']\n",
+    "\n",
+    "#one-hot化が必要なし\n",
+    "columns3 = ['試合内連番', '試合内投球数','イニング内打席数', '打席内投球数','投手試合内対戦打者数', '投手試合内投球数',\n",
+    "            '投手イニング内投球数','打者試合内打席数', 'プレイ前ホームチーム得点数', 'プレイ前アウェイチーム得点数',\n",
+    "            'プレイ前アウト数', 'プレイ前ボール数', 'プレイ前ストライク数','自チーム得点数', '相手チーム得点数', '点差']\n",
+    "#削除\n",
+    "columns5 = ['プレイ前ホームチーム得点数', 'プレイ前アウェイチーム得点数']\n",
+    "\n",
+    "##### ver3用 #####\n",
+    "\n",
+    "#batter,pitcherで使わないやつ\n",
+    "columns_out = ['投手_年度', '投手_チームID', '投手_チーム名', '投手_選手ID', '投手_選手名', '投手_育成選手F', '投手_背番号', '投手_位置', '投手_投', '投手_打',\n",
+    "               '投手_生年月日', '投手_出身高校ID', '投手_出身高校名', '投手_出身大学ID', '投手_出身大学名', '投手_社会人',\n",
+    "               '投手_ドラフト年', '投手_ドラフト種別', '投手_ドラフト順位', '投手_出身国', '投手_出身地', '投手_血液型',\n",
+    "               '打者_年度', '打者_チームID', '打者_チーム名', '打者_選手ID', '打者_選手名', '打者_育成選手F', '打者_背番号', '打者_位置', '打者_投', '打者_打',\n",
+    "               '打者_生年月日', '打者_出身高校ID', '打者_出身高校名', '打者_出身大学ID', '打者_出身大学名', '打者_社会人',\n",
+    "               '打者_ドラフト年', '打者_ドラフト種別', '打者_ドラフト順位', '打者_出身国', '打者_出身地', '打者_血液型']\n",
+    "\n",
+    "#batter,pitcherで使うやつ\n",
+    "columns_in = ['投手_身長', '投手_体重','投手_年俸', '打者_身長', '打者_体重', '打者_年俸']\n",
+    "\n",
+    "\n",
+    "#使うやつ\n",
+    "columns = ['イニング','表裏','打者打席左右',\n",
+    "            '投手投球左右','投手役割','投手登板順','打者打順', '打者守備位置', '1球前ステータス',\n",
+    "            '試合内連番', '試合内投球数','イニング内打席数', '打席内投球数','投手試合内対戦打者数', '投手試合内投球数',\n",
+    "            '投手イニング内投球数','打者試合内打席数', 'プレイ前ホームチーム得点数', 'プレイ前アウェイチーム得点数',\n",
+    "            'プレイ前アウト数', 'プレイ前ボール数', 'プレイ前ストライク数','自チーム得点数', '相手チーム得点数', '点差'\n",
+    "            '投手_身長', '投手_体重','投手_年俸', '打者_身長', '打者_体重', '打者_年俸']\n",
+    "\n",
+    "\n",
+    "##################\n",
+    "\n",
+    "columns4 = ['データ内連番','球種','投球位置区域']\n",
+    "    \n",
+    "for test_pitch_df in test_pitch_df_list:    \n",
+    "    count += 1\n",
+    "    print('========START=========',count)\n",
+    "\n",
+    "    key = ['データ内連番']\n",
+    "    y1 = ['球種'] #目的変数１\n",
+    "    y2 = ['投球位置区域'] #目的変数２\n",
+    "    \n",
+    "    print(\"columns:1\")\n",
+    "    for column in test_pitch_df.columns:\n",
+    "        print(column,' ',end='')\n",
+    "    print('¥n',len(test_pitch_df.columns))\n",
+    "    \n",
+    "#     #データの途中にheaderが誤って挿入されていることの確認、削除\n",
+    "#     print(pd.unique(test_pitch_df[\"イニング\"]))\n",
+    "#     print(test_pitch_df[test_pitch_df['イニング'] == 'イニング'])\n",
+    "#     test_pitch_df = test_pitch_df[test_pitch_df['イニング'] != 'イニング']  #'イニング'に'イニング'と入っている行を削除\n",
+    "    \n",
+    "    #string型になっている要素をintに変換、one-hot化する前に修正しなければならないセット（数値だけどone-hot化するため）\n",
+    "    test_pitch_df[\"イニング\"] = test_pitch_df[\"イニング\"].map(type_change)  \n",
+    "    test_pitch_df[\"投手登板順\"] = test_pitch_df[\"投手登板順\"].map(type_change)  \n",
+    "    test_pitch_df[\"打者打順\"] = test_pitch_df[\"打者打順\"].map(type_change)\n",
+    "    print(pd.unique(test_pitch_df[\"イニング\"]))\n",
+    "    \n",
+    "    #学習データには存在しない登板順_9を登板順_8に強制変更\n",
+    "    test_pitch_df[\"投手登板順\"] = test_pitch_df[\"投手登板順\"].map(touban9_8)\n",
+    "    print(pd.unique(test_pitch_df[\"投手登板順\"]))\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    #余分な特徴量を削除\n",
+    "    X_test = test_pitch_df.drop(columns = columns2)\n",
+    "    X_test = X_test.drop(columns = columns5)\n",
+    "    X_test = X_test.drop(columns = columns_out) #ver3用\n",
+    "    X_test = X_test.drop(columns = ['データ内連番'])\n",
+    "    \n",
+    "    #指定cloumnのone-hot化\n",
+    "    X_test = pd.get_dummies(X_test, columns = columns1)\n",
+    "    \n",
+    "    #string型になっている要素をintに変換\n",
+    "    X_test = X_test.applymap(type_change)  \n",
+    "\n",
+    "    #X_test = test_pitch_df.drop(columns = columns4)\n",
+    "    display(X_test.columns)\n",
+    "\n",
+    "    print(\"columns:2\")\n",
+    "    for column in X_test.columns:\n",
+    "        print(column,' ',end='')\n",
+    "    print(len(X_test.columns))\n",
+    "    \n",
+    "    data_num = pd.concat([data_num, test_pitch_df['データ内連番']],ignore_index =True)\n",
+    "    del test_pitch_df\n",
+    "    gc.collect()\n",
+    "\n",
+    "    X_test.head()\n",
+    "    X_test_ = pd.concat([X_test_, X_test],ignore_index =True)\n",
+    "      \n",
+    "    #要素ごとの個数を表示\n",
+    "    #Y.value_counts()\n",
+    "print(\"End\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -420,6 +633,101 @@
     "        print (\"{}{: >25}{}{: >10}{}\".format('|',var_name,'|',sys.getsizeof(eval(var_name)),'|'))\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(X_test_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#modelの読み込み\n",
+    "xgb_model_load = pickle.load(open('../Model/xgb_model2.pickle', \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test_1 = X_test_[:100000]\n",
+    "X_test_2 = X_test_[100000:200000]\n",
+    "X_test_3 = X_test_[200000:300000]\n",
+    "X_test_4 = X_test_[300000:400000]\n",
+    "X_test_5 = X_test_[400000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#結果表示\n",
+    "X_test_list = [X_test_1, X_test_2, X_test_3, X_test_4, X_test_5]\n",
+    "pred_ = []\n",
+    "for X_test in X_test_list:\n",
+    "    dXtest = xgb.DMatrix(X_test)\n",
+    "    pred = xgb_model_load.predict(dXtest)\n",
+    "    pred = pred.reshape([-1,8])\n",
+    "    pred = pred.tolist()\n",
+    "    pred_.extend(pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "X_test.head()\n",
+    "del X_test_list, pred_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_ = pd.DataFrame(pred_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_.to_csv('../Data/results2.csv', header=False, index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -438,7 +746,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
